fix padding on mobile block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,7 +20,7 @@ body.index {
    #no-mobile {
       color: var(--white);
       padding-top: 5vw;
-      margin: 15vw auto;
+      margin: 15vw auto 5vw auto;
       font-size: clamp(1.5rem, 2vw, 2rem);
       font-weight: 400;
       text-align: center;
